engine-net-2/examples/Errors/OperatorNotFound.grs
new graph "Rules.grg"

exec { x:int = 42 + "42" }

quit
